@@ -2,6 +2,8 @@
 # GNUmakefile - Generated by ProjectCenter
 #
 
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+
 include $(GNUSTEP_MAKEFILES)/common.make
 
 #
