@@ -1,3 +1,12 @@
+2008-08-03 20:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GNUmakefile
+	* main.m
+	* PBMakefileGenerator.m: Replace target names with versions that have
+	"_" instead of " " since this causes an issue.
+	* PBPbxNativeTarget.h:
+	* PBPbxNativeTarget.m: Add method targetNameReplacingString.
+
 2008-07-08 16:10-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* PBPbxGroup.m: Correction for bug #23795.  Patch submitted by
